--- a/BankApplicationUsingGradle/build.gradle
+++ b/BankApplicationUsingGradle/build.gradle
@@ -3,7 +3,7 @@ apply plugin :'java'
 //apply plugin : 'application'
 //apply plugin: 'sonarqube-runner' 
 //apply plugin: "sonar"
-
+//apply plugin: "Vicky"
 
 
 
